--- a/Signup.html
+++ b/Signup.html
@@ -120,6 +120,7 @@
       const password = document.getElementById("password").value;
       const confirmPassword = document.getElementById("confirmPassword").value;
       const accountType = document.getElementById("accountType").value;
+      const name = email;
       console.log(email);
       console.log(password);
       console.log(confirmPassword);
@@ -158,6 +159,8 @@
               body: JSON.stringify({
                 idToken: accessToken,
                 accountType: accountType,
+                name: name,
+                password: password
               }),
             };
 
