--- a/Requestdelivery.html
+++ b/Requestdelivery.html
@@ -61,6 +61,10 @@
     #packageWeight {
       background-color: #f5f7fa;
     }
+    .color_dimensions {
+      background-color: #f5f7fa !important;
+      margin-bottom: 10px !important;
+    }
 
     #packageDescription {
       background-color: #f5f7fa;
@@ -165,7 +169,7 @@
       </select>
       <br />
       <input type="text" placeholder="City" class="form-control" id="receive_city" required /><br />
-      <input type="text" placeholder="Country" class="form-control" id="input_Id recieve_country" required /><br />
+      <input type="text" placeholder="Country" class="form-control" id="recieve_country" required /><br />
     </div>
 
     <h1 class="text-center">Package Information</h1>
@@ -182,6 +186,13 @@
     <div class="form-group">
       <label for="packageWeight">Package Weight (in kg)</label>
       <input type="number" class="form-control" id="packageWeight" required />
+    </div>
+    <div class="form-group">
+      <label for="packageDimensions">Package Dimensions</label>
+      <input type="number" class="form-control color_dimensions" id="packageHeight" required placeholder="Height(cm)" />
+      <input type="number" class="form-control color_dimensions" id="packageWidth" required placeholder="Width(cm)"/>
+      <input type="number" class="form-control color_dimensions" id="packageLength" required placeholder="Length(cm)" />
+
     </div>
 
     <div class="form-group">
@@ -231,6 +242,48 @@
         }
       }
       return true;
+    }
+
+    function getPrice() {
+      var weightOfPackage = parseInt(document.getElementById("packageWeight").value)
+      var heightOfPackage = parseInt(document.getElementById("packageHeight").value)
+      var widthOfPackage= parseInt(document.getElementById("packageWidth").value)
+      var lengthOfPackage= parseInt(document.getElementById("packageLength").value)
+      var destinationOfPackage = document.getElementById("recieve_country").value
+
+      const url = "http://localhost:8080/quotationPrice";
+
+      var params = {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          weightOfPackage: weightOfPackage,
+          heightOfPackage: heightOfPackage,
+          widthOfPackage:widthOfPackage,
+          lengthOfPackage:lengthOfPackage,
+          destinationOfPackage: destinationOfPackage,
+        }),
+      };
+      fetch(url, params)
+        .then((response) => {
+          if (response.ok) {
+            response.json().then((res) => {
+              const price = res.price;
+              window.location.href ="Paymentpage.html?price="+price;
+            });
+          } else {
+            response.text().then((text) => {
+              customAlert(text);
+            });
+          }
+        })
+        .catch((error) => {
+          // Handle errors here
+          customAlert(error);
+          console.error("Error:", error);
+        });
     }
 
     function getCurrentTimestamp() {
@@ -292,7 +345,7 @@
               if (response.ok) {
                 response.json().then((res) => {
                   // Redirect to payment page
-                  window.location.href = "Paymentpage.html";
+                  getPrice()
                 });
               } else {
                 response.text().then((text) => {
