--- a/Trackorderpages.html
+++ b/Trackorderpages.html
@@ -51,8 +51,8 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Date & Time</th>
-              <th scope="col">Location</th>
+              <th scope="col">Location From</th>
+              <th scope="col">Location To</th>
               <th scope="col">Status</th>
             </tr>
           </thead>
